--- a/style.css
+++ b/style.css
@@ -1,40 +1,42 @@
 body {
     font-family: 'Lato', sans-serif;
-    font-size: 14px;
-    line-height: 1.6;
-    color: #333;
+    font-size: 10.5pt;
+    line-height: 1.5;
+    color: #000000;
     max-width: 800px;
     margin: 0 auto;
     padding: 60px 20px;
+    background-color: #fff;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .bio {
     flex: 2;
-    padding-right: 40px;
+    padding-right: 50px;
 }
 
 h1 {
-    font-size: 32px;
-    font-weight: 700;
-    margin-bottom: 15px;
-    color: #000;
+    font-size: 28pt;
+    font-weight: 400;
+    margin-bottom: 10px;
+    color: #000000;
+    margin-top: 0;
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 18pt;
     font-weight: 400;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 8px;
+    border-bottom: 1px solid #000000;
+    padding-bottom: 5px;
     margin-top: 40px;
-    margin-bottom: 20px;
-    color: #000;
+    margin-bottom: 25px;
+    color: #000000;
 }
 
 a {
@@ -46,38 +48,52 @@ a:hover {
     text-decoration: underline;
 }
 
+.links {
+    margin-top: 15px;
+}
+
 .profile-pic img {
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .project {
     display: flex;
-    margin-bottom: 35px;
+    margin-bottom: 40px;
     align-items: flex-start;
 }
 
 .project-img img {
-    width: 160px;
-    margin-right: 25px;
+    width: 150px;
+    margin-right: 30px;
     border: 1px solid #ddd;
 }
 
 .project-info h3 {
-    font-size: 16px;
+    font-size: 11pt;
     font-weight: 700;
     margin: 0;
     color: #1155cc;
 }
 
-.authors, .links-row {
-    font-size: 13px;
-    margin-top: 3px;
-    color: #555;
+.authors {
+    margin: 4px 0;
+    font-size: 10.5pt;
+    color: #000000;
+}
+
+.links-row {
+    font-size: 10pt;
+    margin-bottom: 8px;
 }
 
 p {
-    margin-top: 8px;
+    margin-top: 5px;
+    color: #000000;
+}
+
+strong {
+    font-weight: 700;
 }
