--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 10.5pt;
-    line-height: 1.5;
+    line-height: 1.4;
     color: #000000;
     max-width: 800px;
     margin: 0 auto;
@@ -13,29 +13,28 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
-.bio {
-    flex: 2;
-    padding-right: 50px;
-}
+.bio { flex: 2; padding-right: 50px; }
 
 h1 {
-    font-size: 28pt;
+    font-size: 30pt;
     font-weight: 400;
     margin-bottom: 10px;
     color: #000000;
-    margin-top: 0;
 }
 
 h2 {
-    font-size: 18pt;
+    font-size: 20pt;
     font-weight: 400;
-    border-bottom: 1px solid #000000;
-    padding-bottom: 5px;
     margin-top: 40px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    color: #000000;
+}
+
+del {
+    text-decoration: line-through;
     color: #000000;
 }
 
@@ -44,56 +43,61 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
-}
+a:hover { text-decoration: underline; }
 
-.links {
-    margin-top: 15px;
-}
+.links { margin-top: 15px; }
 
 .profile-pic img {
-    width: 220px;
-    height: 220px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .project {
     display: flex;
+    margin-top: 30px;
     margin-bottom: 40px;
     align-items: flex-start;
 }
 
 .project-img img {
-    width: 150px;
+    width: 160px;
     margin-right: 30px;
     border: 1px solid #ddd;
 }
 
-.project-info h3 {
+.project-title {
     font-size: 11pt;
     font-weight: 700;
-    margin: 0;
+    display: block;
     color: #1155cc;
 }
 
-.authors {
-    margin: 4px 0;
-    font-size: 10.5pt;
-    color: #000000;
-}
+.authors { margin: 2px 0; color: #000000; }
 
-.links-row {
-    font-size: 10pt;
-    margin-bottom: 8px;
-}
-
-p {
-    margin-top: 5px;
-    color: #000000;
-}
-
-strong {
+.status {
+    color: #cc0000;
     font-weight: 700;
+    font-style: italic;
+    margin: 0;
+}
+
+.project-links { margin: 2px 0; }
+
+.description { margin-top: 8px; color: #000000; }
+
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 15px;
+    color: #000000;
+}
+
+.sub-text {
+    font-size: 10pt;
+    color: #000000;
 }
