--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 
 .bio {
     flex: 1;
-    padding-right: 60px; /* Space between text and image */
+    padding-right: 60px;
 }
 
 h1 {
@@ -29,7 +29,6 @@ h1 {
     color: #000000;
 }
 
-/* Specific style for the Bio link */
 .bio p a {
     color: #1155cc;
     text-decoration: none;
@@ -61,7 +60,7 @@ a:hover {
 }
 
 .profile-pic img {
-    width: 240px; /* Larger, like Rahul's */
+    width: 240px;
     height: 240px;
     border-radius: 50%;
     object-fit: cover;
@@ -94,10 +93,10 @@ a:hover {
     color: #000000;
 }
 
+/* Updated Status Style: Clean Black, No Red */
 .status {
-    color: #cc0000; /* Rahul's red */
+    color: #000000;
     font-weight: 700;
-    font-style: italic;
     margin: 2px 0;
 }
 
